# mipt-kisLinux

hw1-fs/: .gitignore  Makefile  fs.c  fs.h  main.c  manage.c  manage.h  myutil.h  tests.sh
hw2-netfs/: .gitignore  CMakeLists.txt  preprocessor.cmake  tests.sh
hw2-netfs/include/: myutil.h  serialization.h
hw2-netfs/include/rfscore/: fs.h  manage.h
hw2-netfs/include/rfsnet/: net.h  operation_defines.h.in
hw2-netfs/src/: backend_operations_impl.c  fs.c  main.c  main_backend.c  main_cli.c  manage.c  myutil.c  net_backend.c  net_frontend.c  serialization.c  serializers.c
hw3-kernel/: CMakeLists.txt  README.md  build.sh  install.sh  test.sh
hw3-kernel/client/: CMakeLists.txt  calls.c  calls.h  lltest.cpp  systest.cpp  test.cpp
hw3-kernel/kernel/: Makefile  directory.c  directory.h  kmodule.c  phonedir.h
hw3-kernel/linux-5.5.y/arch/x86/entry/syscalls/: syscall_32.tbl  syscall_64.tbl
hw3-kernel/linux-5.5.y/include/linux/: syscalls.h
hw3-kernel/linux-5.5.y/include/uapi/asm-generic/: unistd.h
hw3-kernel/linux-5.5.y/kernel/: sys.c  sys_ni.c
hw4-keystats/: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh
hw4-keystats/kernel/: Makefile  kmodule.c
